Изменил скрипты для тестов

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "stylelint:fix": "yarn stylelint --fix",
     "eslint": "eslint --ext js,jsx,vue .",
     "eslint:fix": "yarn eslint --fix",
-    "test:unit": "jest",
-    "test:unit:snapshot": "jest --updateSnapshot"
+    "test": "jest",
+    "test:snapshot": "yarn test --updateSnapshot"
   }
 }
