--- a/package.json
+++ b/package.json
@@ -28,5 +28,22 @@
   "dependencies": {
     "@nuxtjs/pwa": "^2.6.0",
     "nuxt": "^2.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@vue/test-utils": "^1.0.0-beta.25",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
+    "cross-env": "^5.2.0",
+    "eslint": "^5.6.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-vue": "^5.0.0-beta.3",
+    "jest": "^23.6.0",
+    "jest-serializer-vue": "^2.0.2",
+    "stylelint": "^9.6.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "vue-jest": "^2.6.0"
   }
 }
