--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "jest-serializer-vue": "^2.0.2",
     "stylelint": "^9.6.0",
     "stylelint-config-recommended": "^2.1.0",
+    "stylelint-webpack-plugin": "^0.10.5",
     "vue-jest": "^2.6.0"
   }
 }
