--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "jest": "^23.6.0",
     "jest-serializer-vue": "^2.0.2",
+    "postcss-import": "^12.0.0",
+    "postcss-reporter": "^6.0.0",
     "stylelint": "^9.6.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
