--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^2.6.0",
-    "nuxt-edge": "^2.1.0-25645721.232bc01"
+    "nuxt": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
