--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@nuxtjs/pwa": "^2.6.0",
+    "@nuxtjs/sitemap": "^0.1.1",
     "nuxt-edge": "^2.1.0-25651471.963b4dd"
   },
   "devDependencies": {
