--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "cross-env": "^5.2.0",
     "deepmerge": "^2.2.1",
     "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "jest": "^23.6.0",
     "stylelint": "^9.6.0",
+    "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-recommended": "^2.1.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "vue-jest": "^2.6.0"
