--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/sitemap": "^0.1.1",
-    "nuxt-edge": "^2.1.0-25651471.963b4dd"
+    "nuxt-edge": "^2.1.0-25651471.963b4dd",
+    "prettier": "^1.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
