--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^5.6.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-loader": "^2.1.1",
+    "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "jest": "^23.6.0",
     "stylelint": "^9.6.0",
