--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint": "eslint --ext js,jsx,vue .",
     "eslint:check": "eslint --print-config . | eslint-config-prettier-check",
     "eslint:fix": "yarn eslint --fix",
-    "prettier": "prettier **/*.{css,js,jsx,vue,md,babelrc}",
+    "prettier": "prettier {.babelrc,**/*.{css,js,jsx,vue,md}}",
     "prettier:list": "yarn prettier --list-different",
     "prettier:write": "yarn prettier --write",
     "test:unit": "jest"
