Отформатировал при помощи Prettier

--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,24 @@
 {
-  "presets": [["@babel/env", {
-    "modules": false
-  }]],
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "modules": false
+      }
+    ]
+  ],
   "env": {
     "test": {
-      "presets": [["@babel/env", {
-        "targets": {
-          "node": "current"
-        }
-      }]]
+      "presets": [
+        [
+          "@babel/env",
+          {
+            "targets": {
+              "node": "current"
+            }
+          }
+        ]
+      ]
     }
   }
 }
