--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
   "dependencies": {
     "@nuxtjs/pwa": "^2.6.0",
     "@nuxtjs/sitemap": "^0.1.1",
-    "nuxt-edge": "^2.1.0-25651471.963b4dd",
-    "prettier": "^1.14.3"
+    "nuxt-edge": "^2.1.0-25651471.963b4dd"
   },
   "devDependencies": {
     "@babel/core": "^7.1.2",
@@ -51,6 +50,7 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "jest": "^23.6.0",
+    "prettier": "^1.14.3",
     "stylelint": "^9.6.0",
     "stylelint-config-prettier": "^4.0.0",
     "stylelint-config-recommended": "^2.1.0",
