--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "eslint --ext js,jsx,vue .",
     "eslint:check": "eslint --print-config . | eslint-config-prettier-check",
     "eslint:fix": "yarn eslint --fix",
-    "prettier": "prettier {.babelrc,**/*.{css,js,jsx,vue,md}}",
+    "prettier": "prettier {.babelrc,.prettierrc,**/*.{css,js,jsx,vue,md}}",
     "prettier:list": "yarn prettier --list-different",
     "prettier:write": "yarn prettier --write",
     "test:unit": "jest"
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
+    "@nuxtjs/babel-preset-app": "^0.7.0",
     "@vue/test-utils": "^1.0.0-beta.25",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
