--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint": "eslint --ext js,jsx,vue .",
     "eslint:check": "eslint --print-config . | eslint-config-prettier-check",
     "eslint:fix": "yarn eslint --fix",
-    "prettier": "prettier {.babelrc,.prettierrc,**/*.{css,js,jsx,vue,md}}",
+    "prettier": "prettier {.prettierrc,**/*.{css,js,jsx,vue,md}}",
     "prettier:list": "yarn prettier --list-different",
     "prettier:write": "yarn prettier --write",
     "test:unit": "jest"
