--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-loader": "^2.1.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
+    "imagemin-webpack-plugin": "^2.3.0",
     "jest": "^23.6.0",
     "prettier": "^1.14.3",
     "stylelint": "^9.6.0",
