--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "jest"
   ],
   "scripts": {
-    "serve": "cross-env NODE_ENV=development nuxt --config-file configs/nuxt.config.js",
-    "build": "nuxt build --config-file configs/nuxt.config.js",
-    "start": "nuxt start --config-file configs/nuxt.config.js",
-    "generate": "nuxt generate --config-file configs/nuxt.config.js",
+    "serve": "nuxt --config-file configs/nuxt.config.js",
+    "build": "nuxt build --config-file configs/nuxt.build.config.js",
+    "start": "nuxt start --config-file configs/nuxt.start.config.js",
+    "generate": "nuxt generate --config-file configs/nuxt.generate.config.js",
     "stylelint": "stylelint **/*.{css,vue}",
     "stylelint:check": "stylelint-config-prettier-check",
     "stylelint:fix": "yarn stylelint --fix",
